# C3V

./: README.md
dbus_client/: Makefile  client.cpp  dbus_client.cpp  dbus_client.h  dbus_client_c3v  dbus_client_c3v_getAlgoData  dbus_client_c3v_setCSRT  dbus_client_x86  dbus_client_x86_getAlgoData  dbus_client_x86_setCSRT  dbus_client_x86_setTrackingRoi
gst-template/: meson.build
gst-template/gst-plugin/: meson.build
gst-template/gst-plugin/src/: gstalgoprocess.c  gstalgoprocess.h  gstcolormap.c  gstcolormap.h  gstgetsei.c  gstgetsei.h  gstgetseidata.c  gstgetseidata.h  gstseiparse.c  gstseiparse.h  gstsetseidata.c  gstsetseidata.h  gstsray.c  gsttssei.c  gsttssei.h  plugin.c  video-meta.c  video-meta.h
gst-template/gst-plugin/src/libs/botsort/include/: BoTSORT.h  track.h
gst-template/gst-plugin/src/libs/botsort/src/: BoTSORT.cpp  track.cpp
gst-template/gst-plugin/src/nn/: SafeQueue.hpp  WorkerThread.cpp  WorkerThread.h  algo_manager.cpp  algo_manager.h  definition.h  nn_api.cpp  nn_api.h  opencv_colormaps.h  opencv_utility.cpp  opencv_utility.h  tracker_algo.cpp  tracker_algo.h  utility.cpp  utility.h  vnn_global.h  vnn_manager.cpp  vnn_manager.h  yolo.cpp  yolo.h  yolo_info.cpp  yolo_info.h
gst-template/gst-plugin/src/nn/include/CL/: cl_ext.h  cl_ext_viv.h
gst-template/gst-plugin/src/nn/include/HAL/: gc_hal.h  gc_hal_base.h  gc_hal_debug_zones.h  gc_hal_driver.h  gc_hal_dump.h  gc_hal_engine.h  gc_hal_enum.h  gc_hal_options.h  gc_hal_profiler.h  gc_hal_raster.h  gc_hal_statistics.h  gc_hal_types.h  gc_hal_version.h
gst-template/gst-plugin/src/nn/include/HAL/shared/: gc_hal_base_shared.h  gc_hal_driver_shared.h  gc_hal_driver_vg_shared.h  gc_hal_enum_shared.h  gc_hal_profiler_shared.h  gc_hal_types_shared.h  gc_hal_vg_shared.h
laser_dbus/: DBusDefinition.h  Makefile  dbus_client.cpp  dbus_client.h  distance_measure  laser_dbus.cpp
main_ap/: AlgoDataMgr.cpp  AlgoDataMgr.h  CameraAPI.cpp  CameraAPI.h  CameraConfig.h  CameraFunctionMgr.cpp  CameraFunctionMgr.h  DBusDefinition.h  DBusServer.cpp  DBusServer.h  DataDefinition.h  GStreamerPipeline.cpp  GStreamerPipeline.h  Makefile  main.cpp  rgb_config.json  thermal_config.json
main_ap_config/: rgb_config.json  thermal_config.json
